<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hazard_title">Hazard</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="list_preference_default_summary">%s</string>
    <string name="dlg_cancel">cancel</string>
    <string name="dlg_reset_values_message">Reset values to\nAndroid- or Hazard default?</string>
    <string name="dlg_reset_android">Android</string>
    <string name="dlg_reset_hazard">Hazard</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="systemui_restart_toast">This feature requires a SystemUI restart to be applied. We\'ll restart the SystemUI right now.</string>
    <string name="recents_category">Recents</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lockscreen_style">Lockscreen Style</string>
    <string name="navigation_category">Navigation</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="misc_settings_title">Misc</string>
    <string name="button_settings">Buttons</string>
    <string name="navbar_category">Navigation bar</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_clock_date_settings_title">Clock &amp; date</string>
    <string name="status_bar_clock_date_settings_summary">Choose how to display the clock &amp; date in the status bar</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_left_title">Left</string>
    <string name="position_centered_title">Centered</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="clock_date_cat_date_title">Date</string>
    <string name="clock_date_show_seconds_title">Show seconds</string>
    <string name="clock_date_show_seconds_summary">Enable to show clock with seconds in the status bar</string>
    <string name="clock_date_show_date_title">Show date</string>
    <string name="clock_date_show_date_summary">Enable to show the date next to the clock in the status bar</string>
    <string name="clock_date_date_format_title">Date format</string>
    <string name="clock_date_date_custom_date_format">Custom \'DateFormat\'</string>
    <string name="clock_date_date_string_edittext_title">Enter \'DateFormat\' pattern</string>
    <string name="clock_date_date_string_edittext_summary">Enter a valid \'DateFormat\' pattern, eg. MM/dd/yy</string>
    <string name="clock_date_date_style_title">Style</string>
    <string name="clock_date_date_style_lowercase">Lowercase</string>
    <string name="clock_date_date_style_uppercase">Uppercase</string>
    <string name="clock_date_date_size_small_title">Small</string>
    <string name="clock_date_date_size_small_summary">Enabe to display the date small sized</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_clock_selection_summary">Change lockscreen clock style</string>
    <string name="lockscreen_clock_selection_digital">Default</string>
    <string name="lockscreen_clock_selection_digital_bold">Digital (bold)</string>
    <string name="lockscreen_clock_selection_analog">Analog</string>
    <string name="lockscreen_clock_selection_analog_deadpool">Analog (deadpool)</string>
    <string name="lockscreen_clock_selection_sammy">Sammy</string>
    <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
    <string name="lockscreen_clock_selection_toxyc">Toxyc</string>
    <string name="lockscreen_date_selection_title">Date style</string>
    <string name="lockscreen_date_selection_default_aosp">Default (small size)</string>
    <string name="lockscreen_date_selection_default">Default</string>
    <string name="lockscreen_date_selection_str_box">Semi-transparent box</string>
    <string name="lockscreen_date_selection_str_round">Semi-transparent box (round)</string>
    <string name="lockscreen_date_selection_str_toxyc">Tint box (toxyc)</string>
    <string name="hide_lockscreen_clock_title">Clock widget</string>
    <string name="hide_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="hide_lockscreen_date_title">Date widget</string>
    <string name="hide_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="hide_lockscreen_alarm_title">Alarm text</string>
    <string name="hide_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
    <string name="lockscreen_misc_selection_title">Security settings</string>
    <string name="lockscreen_misc_selection_summary">Screen unlock settings</string>
    <string name="secure_category_settings">Security</string>
    <string name="recents_default_category">Recents</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_type_title">Recents Layout</string>
    <string name="recents_type_summary">Change recents layout for Stock, Grid, Android Go</string>
    <string name="recents_stock">Stock</string>
    <string name="recents_grid">Grid</string>
    <string name="recents_go">Android Go</string>
    <string name="quicksettings_summary">Change more quick settings</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
     <string name="carrier_label_title">Carrier label</string>
     <string name="carrier_label_summary">Customize your statusbar carrier label</string>
    <string name="carrier_options">Select display locations</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Enter a custom label. Leave blank to use your network name</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen</string>
    <string name="show_carrier_statusbar">Status bar</string>
    <string name="show_carrier_enabled">Both</string>
    <string name="font_picker_title">Font picker</string>
    <string name="font_picker_summary">Change the rom font style</string>
    <string name="font_picker_progress">Applying new font\u2026</string>
    <string name="wallpaper_tint_title">Shades with wallpaper</string>
    <string name="misc_settings_summary">Miscellaneous options for customization</string>
    <string name="wallpaper_tint_power_menu">Power menu background tint</string>
    <string name="wallpaper_tint_recents">Recents background tint</string>
    <string name="wallpaper_tint_keyguard">Lockscreen background tint</string>
    <string name="wallpaper_tint_notification_shade">Notification shade tint</string>
    <string name="wallpaper_tint_summary">Apply a tint to the background based on the homescreen wallpaper</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="navbar_tuner_title">Manage navigation bar</string>
    <string name="navigation_bar_menu_arrow_keys_title">Arrow keys while typing</string>
    <string name="navigation_bar_menu_arrow_keys_summary">Display left and right cursor buttons while typing</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
    <string name="swap_volume_buttons_summary">Adjust the rocker orientation based on current rotation</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_answer_call_title">Volume keys answer</string>
    <string name="volume_answer_call_summary">Answer the call when volume keys pressed</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="hardware_keys_enable_title">Enable</string>
    <string name="hardware_keys_wake_title">Wake device</string>
    <string name="hardware_keys_utouch" translatable="false">U-Touch</string>
    <string name="hardware_keys_utouch_left_swipe">Left swipe</string>
    <string name="hardware_keys_utouch_right_swipe">Right swipe</string>
</resources>