<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 ToxycOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/button_settings"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="navbar_category"
        android:title="@string/navbar_category">
        <Preference
            android:title="@string/navbar_tuner_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.NavBarActivity" />
        </Preference>

            <com.toxyc.hazard.preference.SystemSettingSwitchPreference
                android:key="navigation_bar_menu_arrow_keys"
                android:title="@string/navigation_bar_menu_arrow_keys_title"
                android:summary="@string/navigation_bar_menu_arrow_keys_summary"
                android:defaultValue="fale"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="hardware_keys"
        android:title="@string/hardware_keys_category" >

        <SwitchPreference
            android:key="hardware_keys_enable"
            android:title="@string/hardware_keys_enable_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="back_key"
        android:title="@string/hardware_keys_back_key_title" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="back_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_back_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_back_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_back_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="home_key"
        android:title="@string/hardware_keys_home_key_title" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="home_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_home_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_home_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_home_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_switch_key"
        android:title="@string/hardware_keys_appswitch_key_title" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="app_switch_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />  

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_overview_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_overview_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_overview_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="menu_key"
        android:title="@string/hardware_keys_menu_key_title" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="menu_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_menu_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_menu_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_menu_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/hardware_keys_assist_key_title" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="assist_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_assist_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_assist_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_assist_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="utouch_key"
        android:title="@string/hardware_keys_utouch" >

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="home_wake_screen"
            android:dependency="hardware_keys_enable"
            android:title="@string/hardware_keys_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_back_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_back_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_assist_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_overview_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_utouch_left_swipe" >
        </com.toxyc.hazard.preference.ActionPreference>

        <com.toxyc.hazard.preference.ActionPreference
            android:key="hwkeys_button_menu_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_utouch_right_swipe" >
        </com.toxyc.hazard.preference.ActionPreference>

    </PreferenceCategory>

   <PreferenceCategory
        android:key="volume_category"
        android:title="@string/volume_category">
        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="swap_volume_buttons"
            android:title="@string/swap_volume_buttons_title"
            android:summary="@string/swap_volume_buttons_summary"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="volume_keys_control_media_stream"
            android:title="@string/volume_keys_control_media_stream_title"
            android:summary="@string/volume_keys_control_media_stream_summary"
            android:defaultValue="false" />

         <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="volume_button_music_control"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false" />

        <com.toxyc.hazard.preference.SystemSettingSwitchPreference
            android:key="call_volume_answer"
            android:title="@string/volume_answer_call_title"
            android:summary="@string/volume_answer_call_summary"
            android:defaultValue="false" />
    </PreferenceCategory>


</PreferenceScreen>
